@@ -24,7 +24,9 @@ New Features:
     the old password EXCEPT when changing password.
   * Update CSS / HTML to use semantic code when possible - no visible changes.
   * Update the UI of the upgrade screen to provide additional information.
-  * Initial (and limited) implementation of some Mediawiki parser functions.
+  * Initial implementation of Mediawiki parser functions including
+    anchorencode, filepath, fullurl, localurl, lc, lcfirst, uc, ucfirst and
+    urlencode.
   * Add support for the {{SITENAME}} and {{SERVER}} magic words.
   * Allow nesting of templates ("{{template1|content={{template2}}}}").
   * Support categories on #REDIRECT pages to match Mediawiki.
